--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2586,5 +2586,108 @@ stories:
   state: Ohio
   domain: http://www.advertiserplymouthoh.com/
   link: http://advertiserplymouthoh.com/index.php/2015/02/12/know-the-disadvantages-of-being-a-journalist/
+images:
+- name: old-granary-field-granaryfield-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-wols.jpg
+- name: desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-diego-rivera1.jpg
+- name: aws-s3-stories-36698086536-f214416faf-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36698086536-f214416faf-z.jpg
+- name: ellis-island-ellisisland-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-diego-rivera1.jpg
+- name: art-museum-art-museum-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crafty-painting.jpg
+- name: blossombar-crafty-painting-file-00-00-50-28.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-28.jpg
+- name: gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
+- name: oldtrain-oldtrain-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-internet-numbers.jpg
+- name: gypsy-wagon-gypsywagon-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-colored-circuits.jpg
+- name: carry-load-carryload-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-space-pizza.jpg
+- name: legal-statue-legalstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kandinsky-bv.jpg
+- name: curtain-curtain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kandinsky-bv.jpg
+- name: white-house-lawn-white-house-lawn-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alien-goggles.jpg
+- name: downtheline-downtheline-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-monet-one.jpg
+- name: berlinwall2-berlinwall-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-post-modern.jpg
+- name: store-on-corner-store-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-storm.jpg
+- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
+- name: berlinwall2-berlinwall-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
+- name: oldhouse-oldhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-rain.jpg
+- name: nyc-flag-nycflag-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gred-mash.jpg
+- name: razorwire-DSC-0080-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purp-paper.jpg
+- name: walled-garden-walled-garden-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-space-pizza.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-3.jpg
+- name: mistywoods-babyfoot-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
+- name: aws-s3-stories-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-dark-dali.jpg
+- name: mistywoods-babyfoot-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-circuit.jpg
+- name: stories-yellow-tree-in-the-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-yellow-tree-in-the-rocks.jpg
+- name: ellis-island-ellisisland-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gred-mash.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+- name: school-clouds-church-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
+- name: server-cloud-server-racks-door-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-marcel-duchamp.jpg
+- name: old-door-lock-old-door-lock-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crabapple.jpg
+- name: liberty-back-statue-liberty-back-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-aqua.jpg
+- name: walled-garden-walled-garden-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-electricity.jpg
+- name: oldtrain-oldtrain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
+- name: beach-clouds-lifeguard-beachclouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-post-modern.jpg
+- name: crow-crow-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-oily-mcoilface.jpg
+- name: border-crossing-bordercrossing-far-away.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-far-away.png
+- name: oldroad-old-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gan-vogh.jpg
+- name: bluelake-deep-connections-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-01-17-38.jpg
+- name: locked-up-steam-lock-up-steam-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-umberto-bocc.jpg
+- name: blossombar-crafty-painting-file-00-00-50-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-38.jpg
+- name: store-on-corner-store-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-circuit.jpg
+- name: border-fence-border-fence-on-hill-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-hot-spicy.jpg
+- name: downtown-los-angeles-downtown-la-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-collage.JPG
+- name: downtheline-downtheline-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
+- name: subway-subway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
 ---
 Rotted Wooden Sculpture Of Native American To Be Replaced.&nbsp;Teen Driver Charged In Death Of Auburn Announcer.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;Make Your Own Beautiful, Durable Concrete Countertops.&nbsp;'Warrior' Julianne Hough Praised By Husband.&nbsp;Incinerator Opponents Gather To Celebrate Signing Of Law.&nbsp;Stutsman County Farm Bureau Awards Scholarships.&nbsp;Triple Murder Suspect Is An Illegal Alien.&nbsp;
